# xojodocs

./: .gitignore  BACKLOG.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  reindex.py  test_sprint2.py  test_sprint3.py  xojodoc.conf.template
docs/: DEVELOPMENT.md  HTML_STRUCTURE.md
src/xojodoc/: cli.py  database.py  indexer.py  parser.py  tui.py
v1-python/: BACKLOG.md  README-old.md  README.md  RELEASE_NOTES_v0.1.0-alpha.md  check_timer.py  migrate_database.py  pyproject.toml  reindex.py  xojodoc.spec
v1-python/docs/: INSTALLATION.md
v1-python/src/: database.py
v1-python/src/xojodoc/: __init__.py  cli.py  config.py  indexer.py  parser.py
v1-python/tests/: __init__.py  test_parser.py
v2-c/: .gitignore  BUILD.md  Makefile  README.md  STATUS.md  build-static.bat  build.bat
v2-c/src/: database.c  database.h  display.c  display.h  main.c
xojo/: CHECKLIST.md  DESIGN.md  README.md
